<resources>
    <string name="app_name">Akshara ESL</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Genie_service_Check">Genie Services not installed.</string>
    <string name="map_genie">Do you want to map with genie?</string>
    <string name="map_genie_yes">YES</string>
    <string name="map_genie_no">NO</string>
    <string name="lang_not">Language not selected</string>
    <string name="akshara_template">Akshara Template</string>
    <string name="child_name">Child Name</string>
    <string name="child_name_hint">enter child name</string>
    <string name="father_name">Father\'s Name</string>
    <string name="father_name_hint">enter father\'s name</string>
    <string name="child_class">Class</string>
    <string name="child_class_hint">enter class name</string>
    <string name="gender">Gender</string>
    <string name="dob">DOB</string>
    <string name="dob_hint">select dob</string>
    <string name="language">Mother tongue</string>
    <string name="selectionType">Selection Type</string>
    <string name="invalid_event_message">Cuurent event is not a valid Telemetry event</string>
    <string name="validation_error_message">Cuurent event is not a valid json</string>
    <string name="invalid_event">INVALID_EVENT</string>
    <string name="db_error">DB_ERROR</string>
    <string name="db_error_message">Unable read or write database</string>
    <string name="validation_error">VALIDATION_ERROR</string>db_error

    <string-array name="menu_list">
        <item>Exit</item>

    </string-array>

    <!--SearchChildFragment-->
    <string name="district_default">PLEASE SELECT DISTRICT</string>
    <string name="block_default">PLEASE SELECT BLOCK</string>
    <string name="cluster_default">PLEASE SELECT CLUSTER</string>
    <string name="school_default">PLEASE SELECT SCHOOL</string>
    <string name="District">District</string>
    <string name="Block">Block</string>
    <string name="Cluster">Cluster</string>
    <string name="School">School</string>
    <string name="btn_Search_Child">Search Child</string>

    <!--ChildListFragment-->
    <string name="childListHeading">Search child</string>
    <string name="info_text">Sync Database Please wait...</string>
    <string name="student_no">Student No</string>
    <string name="enter_student_no">enter student no</string>


</resources>
